Fixes contrast issue on mark page as complete button

--- a/repos/iiif-storage/asset/css/iiif-storage.css
+++ b/repos/iiif-storage/asset/css/iiif-storage.css
@@ -377,6 +377,8 @@
 .c-button input[type="submit"],
 .c-button input[type="button"] {
     background: none;
+    color: #fff;
+    font-size: inherit;
     border: 0;
 }
 
